--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-fastapi
+fastapi~=0.115.3
 uvicorn
 requests
-pydantic
-pydantic-settings
+pydantic~=2.9.2
+pydantic-settings~=2.6.0
 python-dotenv
-beautifulsoup4
+beautifulsoup4~=4.12.3
 langchain
-pinecone
+pinecone~=5.3.1
 sentence_transformers
 transformers
 langchain-huggingface
+aiohttp~=3.10.10
